--- a/content/docs/catalogue/products.ar.mdx
+++ b/content/docs/catalogue/products.ar.mdx
@@ -24,11 +24,12 @@ description: كيفية إنشاء وإدارة وتنظيم منتجاتك بم
 | **اسم المنتج** | اسم المنتج |
 | **الوصف** | وصف اختياري |
 | **القسم** | القسم الذي ينتمي إليه هذا المنتج |
-| **قسم الضريبة** | التصنيف الضريبي لهذا المنتج |
-| **نسبة الضريبة** | النسبة المئوية للضريبة المطبقة |
-| **الضريبة مشمولة** | ما إذا كان سعر البيع يشمل الضريبة بالفعل |
-| **الحالة** | نشط (مرئي وقابل للبيع) أو مسودة (مخفي) |
+| **الحالة** | نشط (مرئي وقابل للبيع)، مسودة (مخفي)، أو لم يعد متاحاً (لم يعد متاحاً للبيع) |
+| **قسم الضريبة** | التصنيف الضريبي لهذا المنتج (يتجاوز إعدادات الضريبة على مستوى المتجر) |
+| **نسبة الضريبة** | النسبة المئوية للضريبة المطبقة على هذا المنتج (يمكن أن تختلف عن الافتراضي للمتجر) |
+| **الضريبة مشمولة** | تبديل للإشارة إلى ما إذا كان سعر البيع يشمل الضريبة بالفعل |
 | **تتبع المخزون** | ما إذا كان سيتم تتبع مستويات المخزون لهذا المنتج |
+| **علامات المنتج** | علامات اختيارية لتنظيم وتصفية المنتجات (مثل: "تخفيض"، "جديد"، "مميز") |
 
 ### الخطوة 2: الإصدارات والتسعير
 
@@ -42,16 +43,36 @@ description: كيفية إنشاء وإدارة وتنظيم منتجاتك بم
 | **اسم الإصدار** | يتم إنشاؤه تلقائياً من قيم الخيارات (مثل: "S / أحمر") |
 | **رمز المنتج (SKU)** | رمز وحدة مخزون فريد |
 | **سعر البيع** | السعر الذي يدفعه العميل |
-| **سعر التكلفة** | تكلفة الحصول على المنتج (يُستخدم لحسابات الربح) |
-| **يُباع حسب** | كيف يُباع المنتج (قطعة، كيلو، إلخ) |
+| **سعر التكلفة** | تكلفة الحصول على المنتج (مطلوب لحسابات الربح الدقيقة) |
+| **يُباع حسب** | كيف يُباع المنتج: كجم، جم، لتر، م، قطعة، وحدة، م²، م³، أو وحدة مخصصة أخرى |
+
+<Callout title="مهم">
+**سعر التكلفة** ضروري لتقارير الربح. بدون أسعار تكلفة دقيقة، ستكون حسابات الربح في قسم [التقارير](/docs/reports/analytics-reports) غير صحيحة.
+</Callout>
 
 ### الخطوة 3: صور المنتج
 
 ارفع صور المنتج:
 
-- أضف صوراً متعددة
-- عيّن **صورة رئيسية** (الصورة الرئيسية المعروضة في القوائم)
-- أعد ترتيب الصور بالسحب
+- **صور متعددة** — أضف حتى عدة صور لكل منتج
+- **الصورة الرئيسية** — عيّن الصورة الرئيسية المعروضة في قوائم المنتجات وكافتراضي
+- **ترتيب الصور** — أعد ترتيب الصور بالسحب (الصورة الأولى هي الرئيسية)
+- **نص بديل** — أضف نصاً وصفياً بديلاً لكل صورة لإمكانية الوصول وتحسين محركات البحث
+
+<Callout title="نصيحة">
+استخدم صوراً عالية الجودة ونصاً وصفياً بديلاً لتحسين ظهور منتجك في نتائج البحث وتوفير إمكانية وصول أفضل.
+</Callout>
+
+### الخطوة 4: التسعير حسب المتجر (متاجر متعددة)
+
+إذا كان لديك متاجر متعددة، يمكنك تعيين أسعار مختلفة لكل متجر:
+
+1. بعد إنشاء المنتج، اذهب إلى قسم **التسعير**.
+2. انقر على **إضافة سعر متجر**.
+3. اختر المتجر وأدخل سعر البيع لذلك المتجر.
+4. كرر لكل متجر يجب أن يكون له سعر مختلف.
+
+إذا لم يتم تعيين سعر محدد للمتجر، يستخدم المنتج سعر البيع الافتراضي لجميع المتاجر.
 
 انقر على **حفظ** لإنشاء المنتج.
 
@@ -69,18 +90,45 @@ description: كيفية إنشاء وإدارة وتنظيم منتجاتك بم
 
 1. انقر على منتج من القائمة.
 2. في صفحة **تفاصيل المنتج**:
-   - انقر على **تعديل** لتعديل المعلومات الأساسية
-   - انقر على **تعديل الصور** لإدارة الصور
+   - انقر على **تعديل** لتعديل المعلومات الأساسية (الاسم، الوصف، القسم، الحالة، إعدادات الضريبة، العلامات)
+   - انقر على **تعديل الصور** لإدارة الصور (إضافة، إزالة، إعادة ترتيب، تعيين رئيسية، إضافة نص بديل)
+   - انقر على **تعديل التسعير** لتعديل الأسعار المحددة للمتجر
    - انقر على **إضافة إصدار** لإضافة إصدار جديد
-   - انقر على إصدار لتعديل سعره أو SKU أو مخزونه
+   - انقر على إصدار لتعديل سعره أو سعر تكلفته أو SKU أو وحدة القياس أو مخزونه
+
+### إدارة علامات المنتج
+
+العلامات تساعدك على تنظيم وتصفية المنتجات:
+
+- **إضافة علامات** — أدخل علامات مفصولة بفواصل (مثل: "تخفيض، مميز، جديد")
+- **تصفية بالعلامات** — استخدم العلامات للعثور بسرعة على المنتجات في قائمة المنتجات
+- **إدارة العلامات** — عدّل أو احذف العلامات من صفحة تعديل المنتج
+
+العلامات مفيدة لإنشاء مجموعات منتجات أو تشغيل عروض ترويجية على مجموعات منتجات محددة.
 
 ## حالات المنتج
 
+كل منتج له حالة تتحكم في ظهوره وتوافره:
+
 | الحالة | المعنى |
 |--------|--------|
-| **نشط** | المنتج مرئي ويمكن إضافته للطلبات |
-| **مسودة** | المنتج محفوظ لكنه غير مرئي أو قابل للبيع بعد |
-| **لم يعد متاحاً** | المنتج لم يعد متاحاً لكن سجله محفوظ |
+| **نشط** | المنتج مرئي في الكتالوج، يمكن إضافته للطلبات، ويظهر في [واجهة المتجر الإلكتروني](/docs/online-store/storefront-overview) |
+| **مسودة** | المنتج محفوظ لكنه غير مرئي للعملاء أو في إنشاء الطلبات. استخدم هذا للمنتجات التي لا تزال تعمل عليها |
+| **لم يعد متاحاً** | المنتج لم يعد متاحاً للبيع، لكن سجله محفوظ. المنتجات التي لم تعد متاحة لا تظهر في قوائم المنتجات لكنها تبقى في سجل الطلبات |
+
+يمكنك تغيير حالة المنتج في أي وقت من صفحة تفاصيل المنتج.
+
+## إعدادات الضريبة لكل منتج
+
+يمكن أن يكون لكل منتج تكوين ضريبي خاص به، يتجاوز إعدادات الضريبة على مستوى المتجر:
+
+- **قسم الضريبة** — صنّف المنتج لأغراض ضريبية (مثل: قياسي، معدل مخفض، معدل صفر، معفي)
+- **نسبة الضريبة** — عيّن نسبة ضريبة محددة لهذا المنتج
+- **الضريبة مشمولة** — فعّل هذا إذا كان سعر البيع يشمل الضريبة بالفعل (سيحسب النظام المبلغ الشامل للضريبة بشكل صحيح)
+
+<Callout title="ملاحظة">
+إذا لم تقم بتعيين إعدادات ضريبة محددة للمنتج، سيستخدم المنتج التكوين الضريبي الافتراضي للمتجر. راجع [حسابات التسعير والضريبة](/docs/calculations/pricing-tax-calculations) لمزيد من التفاصيل.
+</Callout>
 
 ## تتبع المخزون
 
