--- a/content/docs/customers/managing-customers.ar.mdx
+++ b/content/docs/customers/managing-customers.ar.mdx
@@ -21,13 +21,16 @@ description: كيفية إضافة وعرض وإدارة ملفات العملا
 | **الاسم الأخير** | اسم العميل الأخير |
 | **البريد الإلكتروني** | عنوان البريد الإلكتروني للعميل (اختياري) |
 | **رقم الهاتف** | رقم هاتف العميل |
-| **العنوان** | عنوان العميل (اختياري) |
-| **تاريخ الميلاد** | اختياري، للولاء أو التسويق |
-| **ملاحظات** | ملاحظات اختيارية عن العميل |
+| **تاريخ الميلاد** | اختياري، لمكافآت عيد الميلاد والتسويق |
+| **ملاحظات** | ملاحظات خاصة حول تفضيلات العميل أو الحساسيات أو تعليمات خاصة |
 
 4. انقر على **حفظ**.
 
 يمكنك أيضاً إضافة عميل مباشرة من شاشة **إنشاء طلب** بالنقر على **إضافة عميل**.
+
+<Callout title="ملاحظة">
+عناوين العملاء تُدار بشكل منفصل بعد إنشاء العميل. راجع قسم [عناوين العملاء](#عناوين-العملاء) أدناه.
+</Callout>
 
 ## عرض عملائك
 
@@ -49,11 +52,15 @@ description: كيفية إضافة وعرض وإدارة ملفات العملا
 انقر على عميل لرؤية ملفه الكامل:
 
 ### معلومات الاتصال
-- الاسم والبريد الإلكتروني والهاتف والعناوين
+- الاسم والبريد الإلكتروني والهاتف وتاريخ الميلاد والعناوين
 
 ### سجل الطلبات
 - قائمة بجميع الطلبات المقدمة من هذا العميل
 - انقر على طلب لعرض تفاصيله
+
+### زيارات العميل
+- تتبع عدد المرات التي زار فيها العميل متجرك
+- عرض سجل الزيارات مع التواريخ وتفاصيل الطلبات
 
 ### رصيد المتجر
 - رصيد المتجر الحالي
@@ -61,6 +68,41 @@ description: كيفية إضافة وعرض وإدارة ملفات العملا
 
 ### سجل المرتجعات
 - قائمة المرتجعات المقدمة من هذا العميل
+
+### ملاحظات العميل
+- ملاحظات خاصة حول تفضيلات العميل أو الحساسيات أو تعليمات خاصة
+- مرئية فقط لأعضاء الفريق، وليس للعملاء
+
+## عناوين العملاء
+
+يمكن لكل عميل أن يكون لديه عدة عناوين محفوظة لتسهيل تنفيذ الطلبات:
+
+### إضافة عنوان
+
+1. افتح صفحة تفاصيل العميل.
+2. اذهب إلى قسم **العناوين**.
+3. انقر على **إضافة عنوان**.
+4. املأ تفاصيل العنوان:
+
+| الحقل | الوصف |
+|-------|-------|
+| **نوع العنوان** | شقة، منزل، أو مكتب |
+| **الدولة** | اسم الدولة |
+| **المدينة** | اسم المدينة |
+| **تفاصيل العنوان** | الشارع، المبنى، الطابق، رقم الشقة، إلخ |
+| **العنوان الافتراضي** | حدد لتعيينه كعنوان شحن افتراضي |
+
+5. انقر على **حفظ**.
+
+### إدارة العناوين
+
+- **تعيين افتراضي** — انقر على أي عنوان لتعيينه كافتراضي
+- **تعديل العنوان** — انقر على **تعديل** لتعديل تفاصيل العنوان
+- **حذف العنوان** — احذف العناوين التي لم تعد مطلوبة
+
+<Callout title="نصيحة">
+عند إنشاء طلب توصيل، يتم ملء عنوان العميل الافتراضي تلقائياً، لكن يمكنك اختيار عنوان مختلف من عناوينه المحفوظة.
+</Callout>
 
 ## إدارة رصيد المتجر
 
@@ -74,6 +116,19 @@ description: كيفية إضافة وعرض وإدارة ملفات العملا
 4. أدخل المبلغ والسبب.
 5. انقر على **حفظ**.
 
+### تعديلات الرصيد
+
+يمكنك تعديل رصيد متجر العميل يدوياً:
+
+1. افتح صفحة تفاصيل العميل.
+2. اذهب إلى قسم **رصيد المتجر**.
+3. انقر على **تعديل الرصيد**.
+4. أدخل مبلغ التعديل (موجب للإضافة، سالب للخصم).
+5. أضف سبباً للتعديل (مثل: "تصحيح لطلب #123").
+6. انقر على **حفظ**.
+
+جميع تعديلات الرصيد مسجلة في سجل الرصيد، يعرض الرصيد السابق ومبلغ التعديل والرصيد الجديد والسبب والطابع الزمني.
+
 ### كيف يُستخدم رصيد المتجر
 
 - عند إنشاء طلب لهذا العميل، يمكنك اختيار **رصيد المتجر** كطريقة دفع.
@@ -84,12 +139,34 @@ description: كيفية إضافة وعرض وإدارة ملفات العملا
 
 عند إصدار استرداد بطريقة **رصيد المتجر**، يُضاف مبلغ الاسترداد لرصيد العميل تلقائياً.
 
+### سجل الرصيد
+
+اعرض السجل الكامل لجميع معاملات رصيد المتجر:
+- إضافات الرصيد (يدوية أو من الاستردادات)
+- استخدام الرصيد (عند استخدامه للطلبات)
+- تعديلات الرصيد
+- كل إدخال يعرض التاريخ والمبلغ والسبب والرصيد الناتج
+
 ## تعديل عميل
 
 1. افتح صفحة تفاصيل العميل.
 2. انقر على **تعديل**.
-3. حدّث المعلومات.
+3. حدّث المعلومات (الاسم، البريد الإلكتروني، الهاتف، تاريخ الميلاد، الملاحظات).
 4. انقر على **حفظ التغييرات**.
+
+### إدارة ملاحظات العميل
+
+ملاحظات العميل هي ملاحظات خاصة مرئية فقط لأعضاء الفريق. استخدمها لتسجيل:
+- تفضيلات العميل (مثل: "يفضل التوصيل بدون تلامس")
+- الحساسيات أو القيود الغذائية
+- تعليمات خاصة (مثل: "اضغط الجرس مرتين")
+- تذكيرات مهمة حول العميل
+
+لإضافة أو تعديل الملاحظات:
+1. افتح صفحة تفاصيل العميل.
+2. اذهب إلى قسم **الملاحظات**.
+3. انقر على **إضافة ملاحظة** أو **تعديل**.
+4. أدخل ملاحظتك وانقر على **حفظ**.
 
 ## حذف عميل
 
