--- a/content/docs/integrations/multi-currency-language.ar.mdx
+++ b/content/docs/integrations/multi-currency-language.ar.mdx
@@ -13,6 +13,13 @@ description: كيف يتعامل كاشفيو مع العملات واللغات
 - جميع إجماليات الطلبات والمدفوعات والتقارير تستخدم عملة المتجر
 - رمز العملة والتنسيق يتبعان المنطقة (مثل: "200 ج.م" للجنيه المصري، "$200" للدولار الأمريكي)
 
+<Callout title="مهم">
+العملات المتعددة في كاشفيو تعني **اختيار عملة لكل متجر** أثناء الإعداد. النظام **لا** يدعم:
+- تحويل العملات في الوقت الفعلي
+- طلبات متعددة العملات (الطلبات يمكن معالجتها فقط بعملة المتجر)
+- التبديل التلقائي للعملة بناءً على موقع العميل
+</Callout>
+
 ### تحديد عملة المتجر
 
 عند إنشاء متجر، تختار عملته. تُحدد أثناء إنشاء المتجر و**لا يمكن تغييرها** بعد ذلك.
@@ -57,6 +64,17 @@ description: كيف يتعامل كاشفيو مع العملات واللغات
 - **العربية** — دعم RTL كامل مع ترجمات عربية
 
 يمكن للعملاء تبديل اللغة باستخدام **محدد اللغة** في ترويسة المتجر.
+
+### النطاق الفرعي للمتجر
+
+واجهة متجرك الإلكتروني متاحة عبر **نطاق فرعي** على نطاق cash-vio.com:
+
+- التنسيق: `yourstorename.cash-vio.com`
+- مثال: `mystore.cash-vio.com`
+
+<Callout title="ملاحظة">
+كاشفيو يدعم حالياً **واجهات المتاجر القائمة على النطاقات الفرعية فقط**. النطاقات المخصصة (مثل: `yourstore.com`) غير متاحة. يمكنك تخصيص اسم النطاق الفرعي لمتجرك عند إعداد واجهة المتجر الإلكتروني.
+</Callout>
 
 ### ما يتم ترجمته
 
