--- a/content/docs/reports/analytics-reports.ar.mdx
+++ b/content/docs/reports/analytics-reports.ar.mdx
@@ -5,14 +5,23 @@ description: كيفية استخدام لوحة التقارير لتتبع ال
 
 ## الوصول للتقارير
 
-اذهب إلى **التقارير** في القائمة الجانبية. سترى عدة فئات تقارير، كل منها يمكن الوصول إليه كتبويب أو صفحة فرعية.
+اذهب إلى **التقارير** في القائمة الجانبية. سترى ستة تبويبات تقارير، كل منها يوفر رؤى مختلفة حول أداء أعمالك.
 
-## نظرة عامة على المبيعات
+### اختيار نطاق التاريخ
 
-تقرير **نظرة عامة على المبيعات** يعرض أداء أعمالك الإجمالي:
+جميع التقارير تدعم اختيار نطاق تاريخ مرن:
+
+- **مرشحات سريعة** — عروض يومية أو أسبوعية أو شهرية أو سنوية
+- **نطاق مخصص** — حدد تواريخ بداية ونهاية محددة
+- **فترات المقارنة** — قارن الفترة الحالية مع الفترة السابقة (مثل: هذا الشهر مقابل الشهر الماضي)
+- **أهداف مؤشرات الأداء الرئيسية** — حدد وتتبع أهدافاً للمقاييس الرئيسية
+
+## تبويب النظرة العامة
+
+تبويب **النظرة العامة** يوفر نظرة شاملة على المبيعات:
 
 - **إجمالي المبيعات** — الإيرادات من الطلبات المكتملة
-- **عدد الطلبات** — عدد الطلبات في الفترة المحددة
+- **إجمالي الطلبات** — عدد الطلبات في الفترة المحددة
 - **متوسط قيمة الطلب** — إجمالي المبيعات مقسوماً على عدد الطلبات
 - **نسبة النمو** — مقارنة بالفترة السابقة
 
@@ -23,52 +32,71 @@ description: كيفية استخدام لوحة التقارير لتتبع ال
 - **المبيعات حسب طريقة الدفع** — تفصيل كيف يدفع العملاء
 - **أفضل المنتجات** — المنتجات الأكثر مبيعاً حسب الإيرادات أو الكمية
 
-### المرشحات
-- **نطاق التاريخ** — حدد تاريخ البداية والنهاية
-- **فترة العرض** — يوم، أسبوع، شهر، أو سنة
+## تبويب الأرباح
 
-## تحليل الأرباح
+تبويب **الأرباح** يساعدك على فهم هوامشك وربحيتك:
 
-تقرير **الأرباح** يساعدك على فهم هوامشك:
-
-- **الإيرادات مقابل التكلفة** — مقارنة أسعار البيع بأسعار التكلفة
-- **هوامش الربح** — عرض ربحك الإجمالي حسب المنتج أو القسم
-- **تحليل التكاليف** — تتبع التكاليف حسب المورد
-- **ربحية المنتج** — تحديد منتجاتك الأكثر والأقل ربحية
+- **الربح الإجمالي** — إجمالي الإيرادات ناقص تكلفة البضائع المباعة
+- **الربح الصافي** — الربح الإجمالي ناقص المصروفات التشغيلية
+- **هوامش الربح** — هوامش الربح الإجمالي والصافي كنسب مئوية
+- **تحليل تكلفة البضائع المباعة** — تفصيل تكلفة البضائع المباعة حسب المنتج أو القسم
+- **أكثر المنتجات ربحية** — المنتجات ذات أعلى هوامش ربح
+- **منتجات الهامش المنخفض** — المنتجات التي قد تحتاج تعديلات تسعير
 
 <Callout title="ملاحظة">
 حسابات الأرباح تستخدم **سعر التكلفة** الذي حددته لكل إصدار منتج. تأكد من تحديث أسعار التكلفة للحصول على تقارير أرباح دقيقة.
 </Callout>
 
-## تحليلات العملاء
+## تبويب العملاء
 
-تقرير **العملاء** يعرض أنماط سلوك العملاء:
+تبويب **العملاء** يعرض أنماط سلوك العملاء والتقسيم:
 
-- **اكتساب العملاء** — كم عميل جديد مع الوقت
-- **معدل العملاء العائدين** — نسبة العملاء المتكررين
+- **العملاء الجدد مقابل العائدين** — تفصيل اكتساب العملاء
+- **معدل الاحتفاظ بالعملاء** — نسبة العملاء الذين يقومون بعمليات شراء متكررة
+- **شرائح العملاء** — تجميع العملاء حسب أنماط الإنفاق (مثل: VIP، عادي، معرض للخطر)
+- **أفضل العملاء** — العملاء ذوو أعلى قيمة دائمة أو إنفاق حديث
+- **العملاء المعرضون للخطر** — العملاء الذين لم يشتروا مؤخراً وقد يحتاجون إعادة تفاعل
+
+### مقاييس العملاء
 - **القيمة الدائمة للعميل** — متوسط إجمالي الإنفاق لكل عميل
-- **تقسيم العملاء** — تجميع العملاء حسب أنماط الإنفاق
+- **متوسط تكرار الشراء** — كم مرة يشترون العملاء
+- **تكلفة اكتساب العميل** — تكلفة اكتساب عملاء جدد
 
-## أداء الموظفين
+## تبويب المرتجعات
 
-تقرير **الموظفين** يتتبع مقاييس أعضاء الفريق:
+تبويب **المرتجعات** يساعدك على فهم أنماط الإرجاع:
 
-- **المبيعات حسب الموظف** — الإيرادات المحققة لكل عضو فريق
+- **معدل الإرجاع** — نسبة الطلبات ذات المرتجعات
+- **قيمة المرتجعات** — إجمالي القيمة المالية للمنتجات المرجعة
+- **قيمة الاسترداد** — إجمالي المبلغ المسترد للعملاء
+- **أسباب الإرجاع** — تفصيل لماذا تُرجع المنتجات (معيب، مقاس خاطئ، العميل غير رأيه، إلخ)
+- **منتجات الإرجاع العالي** — المنتجات ذات أعلى معدلات إرجاع قد تحتاج انتباهاً
+
+## تبويب الموظفين
+
+تبويب **الموظفين** يتتبع أداء أعضاء الفريق:
+
+- **الأداء حسب الموظف** — مقاييس فردية لكل عضو فريق
+- **أفضل الأداء** — أعضاء الفريق ذوو أعلى مبيعات أو عدد طلبات
+- **المبيعات لكل ساعة** — مقاييس الإنتاجية التي تعرض كفاءة المبيعات
+- **ترتيب الموظفين** — لوحة المتصدرين التي تقارن أداء الموظفين
 - **الطلبات المعالجة** — عدد الطلبات التي تعامل معها كل شخص
 - **اتجاهات الأداء** — كيف يتغير الأداء الفردي مع الوقت
 
-## تحليلات المرتجعات
+## تبويب الرؤى
 
-تقرير **المرتجعات** يساعدك على فهم أنماط الإرجاع:
+تبويب **الرؤى** يوفر توصيات مبنية على البيانات وتحليل صحة الأعمال:
 
-- **معدل الإرجاع** — نسبة الطلبات ذات المرتجعات
-- **أسباب الإرجاع** — تفصيل لماذا تُرجع المنتجات
-- **المرتجعات حسب المنتج** — أي المنتجات تُرجع أكثر
-- **قيمة المرتجعات** — إجمالي القيمة المالية للمرتجعات
+- **نقاط صحة الأعمال** — النقاط الإجمالية بناءً على المقاييس الرئيسية
+- **المشاكل الحرجة** — مشاكل تحتاج انتباهاً فورياً
+- **تحذيرات** — مشاكل محتملة يجب مراقبتها
+- **الإنجازات** — اتجاهات إيجابية وإنجازات
+- **الفرص** — مجالات للنمو والتحسين
+- **الإجراءات الموصى بها** — خطوات محددة يمكنك اتخاذها لتحسين الأداء
 
-## رؤى الأعمال
-
-قسم **الرؤى** يوفر توصيات مبنية على البيانات لأعمالك، تساعدك على تحديد الاتجاهات والفرص.
+<Callout title="نصيحة">
+راجع تبويب الرؤى بانتظام للبقاء استباقياً حول أداء أعمالك وتحديد الفرص قبل أن تصبح مشاكل.
+</Callout>
 
 ## تصدير التقارير
 
