--- a/content/docs/orders/creating-orders.mdx
+++ b/content/docs/orders/creating-orders.mdx
@@ -16,6 +16,7 @@ This is where you configure the order:
 |-------|-------------|
 | **Store** | Select which store this order belongs to (if you have multiple stores) |
 | **Customer** | Select an existing customer or click **Add Customer** to create a new one |
+| **Order Source** | Automatically tracked: POS, Portal, Mobile, or API (shows where the order originated) |
 | **Fulfillment Method** | Choose: In-Store, Pickup, Delivery, or Dine-In |
 | **Delivery Address** | Required if fulfillment is Delivery (country, city, details) |
 | **Channel** | The sales channel for this order |
@@ -28,7 +29,11 @@ This is where you select products to add to the order:
 1. **Browse by category** — Click category tabs to filter products.
 2. **Search** — Use the search bar to find products by name.
 3. **Click a product** to add it to the order. If the product has multiple variants, you will be asked to select one.
-4. **Custom Item** — Click **Add Custom Item** to add a non-inventory item with a custom name and price.
+4. **Custom Item** — Click **Add Custom Item** to add an item that's not in your inventory:
+   - Enter a custom name and description
+   - Set the price and quantity
+   - Custom items are useful for services, special requests, or items you don't regularly stock
+   - Custom items don't affect inventory levels
 
 ### Cart Section
 
@@ -64,13 +69,30 @@ Below the cart, you will see the order calculation:
 
 1. Click **Checkout** when the order is ready.
 2. A payment dialog opens.
-3. Select the **payment method** (Cash, Card, InstaPay, Mobile Wallet, Bank Transfer, Store Credit).
+3. Select the **payment method**:
+   - **Cash** — Physical cash payment
+   - **Card** — Credit or debit card payment
+   - **InstaPay** — InstaPay payment
+   - **Mobile Wallet** — Mobile wallet payment (e.g., Vodafone Cash, Orange Money)
+   - **Bank Transfer** — Bank transfer payment
+   - **Store Credit** — Use the customer's store credit balance (only available if a customer is selected and has credit)
+
 4. Enter the **amount paid**.
-5. Options:
+5. Payment options:
    - **Full payment** — Pay the entire amount at once.
-   - **Partial payment** — Pay part now and schedule the rest.
+   - **Partial payment** — Pay part now and schedule the rest (see [Scheduled Payments](#scheduled-payments) below).
    - **Skip payment** — Create the order with a pending payment status.
 6. Click **Confirm** to complete the order.
+
+### Store Credit Payment
+
+When a customer is selected and has a store credit balance:
+
+- **Store Credit** appears as a payment method option
+- The available credit amount is shown
+- You can use all or part of the credit
+- If the credit doesn't cover the full order, you can combine it with another payment method
+- The credit is automatically deducted from the customer's balance
 
 ### Cash Payment with Change
 
@@ -79,13 +101,41 @@ If the customer pays with cash and gives more than the total:
 - The system shows the **change amount** to give back.
 - Example: Order total is 150 EGP, customer pays 200 EGP → Change is 50 EGP.
 
+### Scheduled Payments
+
+For orders with partial payments, you can schedule the remaining balance:
+
+1. Select **Partial payment** during checkout.
+2. Enter the amount being paid now.
+3. Set the **due date** for the remaining balance.
+4. The order is created with a payment status showing the paid amount and outstanding balance.
+5. You can track scheduled payments in the [Overdue Payments](/docs/orders/overdue-payments) section.
+
+<Callout title="Note">
+Scheduled payments help you manage customer credit and track outstanding balances. Make sure to follow up on due payments to maintain healthy cash flow.
+</Callout>
+
 ## After Order Creation
 
 Once the order is created:
 
-- A **success dialog** appears with the option to **print a receipt**.
+- A **success dialog** appears with receipt options (see [Receipt Options](#receipt-options) below).
 - The order appears in the **Sales** list with its order number.
+- **Order source** is automatically recorded (POS, Portal, Mobile, or API) for tracking and analytics.
 - Inventory is automatically adjusted (if inventory tracking is enabled).
+
+### Receipt Options
+
+After creating an order, you have several options for providing the receipt to the customer:
+
+- **Print Receipt** — Print a physical receipt using your receipt printer
+- **Download PDF** — Download the receipt as a PDF file to email or share
+- **Share Link** — Generate a shareable link that the customer can access to view or download the receipt
+- **QR Code** — Display a QR code that customers can scan to access their receipt
+
+<Callout title="Tip">
+Receipt links and QR codes are especially useful for delivery orders or when customers prefer digital receipts. The link remains accessible for future reference.
+</Callout>
 
 <Callout title="Tip">
 You can create orders with a pre-selected customer by navigating from the Customer Details page. The customer is automatically filled in.
