--- a/content/docs/returns-refunds/returns.mdx
+++ b/content/docs/returns-refunds/returns.mdx
@@ -7,6 +7,18 @@ description: How to process product returns, select return reasons, and manage t
 
 A **return** is when a customer brings back products from a completed order. Returns track which items were returned, why, and how the refund should be processed.
 
+## Return Types
+
+Cashvio supports three types of returns:
+
+| Type | Description |
+|------|-------------|
+| **Return & Refund** | Physical return of products + refund to customer |
+| **Return Only** | Physical return of products, no refund issued |
+| **Refund Only** | Refund to customer without requiring physical return |
+
+When creating a return, you select the appropriate type based on your business needs and the customer's situation.
+
 ## Creating a Return
 
 Returns are created from a specific order:
@@ -20,18 +32,37 @@ Returns are created from a specific order:
 
 ### Return Reasons
 
+When creating a return, you must select a reason for each item. The available predefined reasons are:
+
 | Reason | Description |
 |--------|-------------|
 | **Changed Mind** | Customer decided not to keep the product |
 | **Wrong Item** | A different product was delivered |
-| **Defective Item** | Product has a manufacturing defect |
+| **Defective** | Product has a manufacturing defect |
 | **Damaged** | Product was damaged during delivery or handling |
 | **Not as Described** | Product does not match its description |
 | **Size/Fit Issue** | Wrong size or does not fit |
 | **Quality Issue** | Product quality is below expectations |
 | **Duplicate Order** | Customer accidentally ordered twice |
-| **Missing Parts/Accessories** | Product is incomplete |
-| **Expired Product** | Product has passed its expiry date |
+| **Missing Parts** | Product is incomplete or missing accessories |
+| **Expired** | Product has passed its expiry date |
+| **Other** | Any other reason (add a note) |
+
+### Non-Restock Reasons
+
+When processing a return, you can mark items as **non-restockable** if they cannot be returned to inventory. The available non-restock reasons are:
+
+| Reason | Description |
+|--------|-------------|
+| **Damaged** | Item is too damaged to resell |
+| **Defective** | Item has defects that prevent resale |
+| **Expired** | Item has passed its expiry date |
+| **Contaminated** | Item has been contaminated and cannot be resold |
+| **Compensation** | Item given as compensation to customer |
+| **Customer Kept** | Customer kept the item despite return request |
+| **Quality Issue** | Quality issues prevent resale |
+| **Packaging Damaged** | Packaging is damaged and item cannot be resold |
+| **Non-Trackable Inventory** | Item is not tracked in inventory system |
 | **Other** | Any other reason (add a note) |
 
 4. Review the return summary.
@@ -68,8 +99,9 @@ The returns list shows:
 3. Click **Approve** or **Reject**.
 
 When a return is **approved**:
-- The returned items' inventory is restored (if inventory tracking is enabled)
-- A [refund](/docs/returns-refunds/refunds) can be issued from the return or order details
+- The returned items' inventory is restored (if inventory tracking is enabled and items are marked as restockable)
+- Items marked with non-restock reasons are **not** added back to inventory
+- A [refund](/docs/returns-refunds/refunds) can be issued from the return or order details (if the return type includes refund)
 
 <Callout title="Note">
 Returns and refunds are separate actions. Approving a return does not automatically issue a refund. You need to create a refund separately if you want to return money to the customer.
